# legged_bot_kinematics

./: CMakeLists.txt  LICENSE  package.xml  setup.py
include/: bot.h  joint.h  leg.h  legged_bot.h  python_bridge.h  segment.h
scripts/: test_bot.py  test_joint.py  test_leg.py
src/: bot.cpp  joint.cpp  leg.cpp  legged_bot.cpp  python_bridge.cpp  segment.cpp
